added enum, replaced base URL with api - it fixes the previous problem of inexhaustive and repetitive search results

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from bs4 import BeautifulSoup\n",
     "import csv\n",
     "import os\n",
+    "from enum import Enum\n",
     "\n",
     "#methodology; TLDR: idempotent write op with job-id as primary key\n",
     "# 1. use cvs as database\n",
@@ -22,23 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "#configurations\n",
-    "base_url_prefix = \"https://www.linkedin.com/jobs/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%20States&pageNum=0&start=\"\n",
-    "row_increment_default = 25\n",
-    "max_row_default = 501\n",
-    "debug_mode = False\n",
-    "debug_company=\"\"\n",
+    "#base_url_prefix = \"https://www.linkedin.com/jobs/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%20States&pageNum=0&start=\"\n",
+    "base_url_prefix = \"https://www.linkedin.com/jobs-guest/jobs/api/seeMoreJobPostings/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%2BStates&geoId=103644278&trk=public_jobs_jobs-search-bar_search-submit&start=\"\n",
+    "row_increment_default = 10\n",
+    "max_row_default = 2000\n",
     "csv_name=\"linkedin-job-scraper-database.csv\"\n",
-    "csv_columns=['job_id','company','job_type','title','location','link','date']"
+    "csv_columns=['job_id','company','job_type','title','location','link','date']\n",
+    "\n",
+    "class DebugLevel(Enum):\n",
+    "    WARN = 0\n",
+    "    GENERAL = 1\n",
+    "    GRANULAR = 2\n",
+    "    \n",
+    "debug_level = DebugLevel.WARN\n",
+    "debug_company=\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_csv_in_cache(reader):\n",
+    "    dups_detection=[]\n",
     "    for row in reader: #reader knows first row is headers\n",
     "        key = row['job_id']\n",
+    "        \n",
+    "        if key in dups_detection:\n",
+    "            print(f\"duplicate detected: job_id={key}\")\n",
+    "        else:\n",
+    "            dups_detection.append(key)\n",
+    "            \n",
     "        value = {k: v for k, v in row.items() if k != 'job_id'}\n",
     "        jobs[key] = value\n",
     "\n",
@@ -65,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "94 rows read from csv\n"
+      "555 rows read from csv\n"
      ]
     }
    ],
@@ -91,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,13 +132,17 @@
     "            job_id = re.search(pattern,link).group(2)\n",
     "\n",
     "            #debug\n",
-    "            if debug_mode and debug_company != \"\" and company == debug_company:\n",
+    "            if debug_level==DebugLevel.GRANULAR and debug_company != \"\" and company == debug_company:\n",
     "                print(f\"id:{job_id},title:{title},job_type:{job_type},link:{link}\")\n",
+    "            elif debug_level==DebugLevel.GENERAL:\n",
+    "                print(f\"id:{job_id},title:{title},job_type:{job_type},company:{company}\")\n",
     "            \n",
     "            #look up job_id, omit if cache hit, add to cache and jobs_to_add array if cache miss\n",
-    "            if jobs.get(job_id,'') != '': #cache hit\n",
-    "                if debug_mode:\n",
+    "            if len(jobs_to_add) > 0 and job_id in jobs_to_add[0]: # exists in delta\n",
+    "                if debug_level==DebugLevel.WARN: #if item offset is set efficiently this printline should never show\n",
     "                    print(f\"we've seen {company}-{job_id}\")\n",
+    "                continue\n",
+    "            elif jobs.get(job_id,\"\") != \"\": # cache hit: exists in database\n",
     "                continue\n",
     "            else:                    \n",
     "                jobs.setdefault(job_id,{\n",
@@ -143,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 jobs added\n"
+      "41 jobs added\n"
      ]
     }
    ],
@@ -166,17 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vincentchen/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -210,98 +221,134 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>SynergisticIT</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2024-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ICONMA</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2024-05-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jobs Malaysia - Two95 HR HUB</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2024-04-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Varo Bank</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2024-05-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lockheed Martin</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2024-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Airbnb</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2024-05-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Microsoft</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2024-05-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Team Remotely Inc</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2024-05-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Genesis10</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2024-05-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Marlee (Fingerprint For Success)</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-05-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nike</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-05-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Intellectt Inc</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-05-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Get It Recruit - Information Technology</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Interclypse</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-05-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Artera</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oracle</th>\n",
        "      <td>4</td>\n",
        "      <td>2024-05-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Nike</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2024-05-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ashby</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2024-05-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Genesis Therapeutics</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2024-04-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ever</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>The Walt Disney Company</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Netflix</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Open Systems Inc.</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lockheed Martin</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LinkedIn</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Saragossa</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Tagup, Inc.</th>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>2024-05-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Midpoint Markets</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-11</td>\n",
+       "      <th>The Home Depot</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-05-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Airbnb</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-05-16</td>\n",
+       "      <th>LinkedIn</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-05-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Experian</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-05-20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         count         max\n",
-       "company                                   \n",
-       "SynergisticIT                4  2024-05-20\n",
-       "Nike                         3  2024-05-17\n",
-       "Ashby                        3  2024-05-01\n",
-       "Genesis Therapeutics         3  2024-04-22\n",
-       "Ever                         2  2024-05-16\n",
-       "The Walt Disney Company      2  2024-05-18\n",
-       "Netflix                      2  2024-05-20\n",
-       "Open Systems Inc.            2  2024-05-15\n",
-       "Lockheed Martin              2  2024-05-20\n",
-       "LinkedIn                     2  2024-05-14\n",
-       "Saragossa                    2  2024-05-13\n",
-       "Tagup, Inc.                  2  2024-05-10\n",
-       "Midpoint Markets             2  2024-05-11\n",
-       "Airbnb                       2  2024-05-16"
+       "                                         count         max\n",
+       "company                                                   \n",
+       "SynergisticIT                               15  2024-05-20\n",
+       "ICONMA                                      11  2024-05-15\n",
+       "Jobs Malaysia - Two95 HR HUB                 8  2024-04-26\n",
+       "Varo Bank                                    8  2024-05-10\n",
+       "Lockheed Martin                              8  2024-05-20\n",
+       "Airbnb                                       7  2024-05-16\n",
+       "Microsoft                                    7  2024-05-21\n",
+       "Team Remotely Inc                            6  2024-05-21\n",
+       "Genesis10                                    6  2024-05-21\n",
+       "Marlee (Fingerprint For Success)             5  2024-05-17\n",
+       "Nike                                         5  2024-05-21\n",
+       "Intellectt Inc                               5  2024-05-17\n",
+       "Get It Recruit - Information Technology      5  2024-05-20\n",
+       "Interclypse                                  5  2024-05-21\n",
+       "Artera                                       4  2024-04-25\n",
+       "Oracle                                       4  2024-05-20\n",
+       "Tagup, Inc.                                  4  2024-05-10\n",
+       "The Home Depot                               4  2024-05-16\n",
+       "LinkedIn                                     4  2024-05-14\n",
+       "Experian                                     4  2024-05-20"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +357,7 @@
     "import pandas as pd\n",
     "df=pd.DataFrame(jobs).T\n",
     "df2=df.groupby(['company'])['date'].agg(['count','max'])\n",
-    "df2.sort_values('count',ascending=False)[df2['count']>1]"
+    "df2.sort_values('count',ascending=False).head(20)"
    ]
   },
   {
