added ignore list, removed all outputs

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,13 @@
     "    GRANULAR = 2\n",
     "    \n",
     "debug_level = DebugLevel.WARN\n",
-    "debug_company=\"\""
+    "debug_company=\"\"\n",
+    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,19 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "555 rows read from csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# load csv into cache\n",
     "if not os.path.exists(csv_name):\n",
     "    with open(csv_name, 'w', newline='') as csvfile:\n",
     "        writer = csv.writer(csvfile) #this will create new file if not exist\n",
@@ -106,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +118,10 @@
     "            title = job.find('h3', {'class': 'base-search-card__title'}).text.strip()\n",
     "            job_type = 'em' if 'manager' in title.lower() else 'eng'\n",
     "            company = job.find('a', {'class': 'hidden-nested-link'}).text.strip()\n",
+    "            \n",
+    "            if company in ignore_list: #these are staffing companies\n",
+    "                continue\n",
+    "            \n",
     "            location = job.find('span', {'class': 'job-search-card__location'}).text.strip()\n",
     "            link = job.find('a', {'class': 'base-card__full-link'}).attrs['href']\n",
     "            pattern = r\"(.*-)(\\d+)\"\n",
@@ -162,17 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "41 jobs added\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(csv_name, 'a', newline='') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
@@ -185,174 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>company</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>SynergisticIT</th>\n",
-       "      <td>15</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ICONMA</th>\n",
-       "      <td>11</td>\n",
-       "      <td>2024-05-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jobs Malaysia - Two95 HR HUB</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Varo Bank</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-05-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lockheed Martin</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Airbnb</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2024-05-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Microsoft</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2024-05-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Team Remotely Inc</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2024-05-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Genesis10</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2024-05-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Marlee (Fingerprint For Success)</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2024-05-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nike</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2024-05-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Intellectt Inc</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2024-05-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Get It Recruit - Information Technology</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Interclypse</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2024-05-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Artera</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-04-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Oracle</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tagup, Inc.</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-05-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>The Home Depot</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-05-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LinkedIn</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-05-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Experian</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-05-20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         count         max\n",
-       "company                                                   \n",
-       "SynergisticIT                               15  2024-05-20\n",
-       "ICONMA                                      11  2024-05-15\n",
-       "Jobs Malaysia - Two95 HR HUB                 8  2024-04-26\n",
-       "Varo Bank                                    8  2024-05-10\n",
-       "Lockheed Martin                              8  2024-05-20\n",
-       "Airbnb                                       7  2024-05-16\n",
-       "Microsoft                                    7  2024-05-21\n",
-       "Team Remotely Inc                            6  2024-05-21\n",
-       "Genesis10                                    6  2024-05-21\n",
-       "Marlee (Fingerprint For Success)             5  2024-05-17\n",
-       "Nike                                         5  2024-05-21\n",
-       "Intellectt Inc                               5  2024-05-17\n",
-       "Get It Recruit - Information Technology      5  2024-05-20\n",
-       "Interclypse                                  5  2024-05-21\n",
-       "Artera                                       4  2024-04-25\n",
-       "Oracle                                       4  2024-05-20\n",
-       "Tagup, Inc.                                  4  2024-05-10\n",
-       "The Home Depot                               4  2024-05-16\n",
-       "LinkedIn                                     4  2024-05-14\n",
-       "Experian                                     4  2024-05-20"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df=pd.DataFrame(jobs).T\n",
@@ -365,9 +188,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#todo connect to google drive via api"
-   ]
+   "source": []
   }
  ],
  "metadata": {
