added count multiplier for em vs eng

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -32,6 +32,7 @@
     "base_url_prefix = \"https://www.linkedin.com/jobs-guest/jobs/api/seeMoreJobPostings/search?keywords=software%20engineer%20OR%20engineering%20manager&location=United%2BStates&geoId=103644278&trk=public_jobs_jobs-search-bar_search-submit&start=\"\n",
     "row_increment_default = 10\n",
     "max_row_default = 2000\n",
+    "EM_AS_ENG_MULTIPLIER=3\n",
     "csv_name=\"linkedin-job-scraper-database.csv\"\n",
     "csv_columns=['job_id','company','job_type','title','location','link','date']\n",
     "\n",
@@ -42,7 +43,7 @@
     "    \n",
     "debug_level = DebugLevel.WARN\n",
     "debug_company=\"\"\n",
-    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\"]"
+    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\",\"LanceSoft, Inc.\"]"
    ]
   },
   {
@@ -179,16 +180,17 @@
    "source": [
     "import pandas as pd\n",
     "df=pd.DataFrame(jobs).T\n",
-    "df2=df.groupby(['company'])['date'].agg(['count','max'])\n",
-    "df2.sort_values('count',ascending=False).head(20)"
+    "df_eng=df[df['job_type']=='eng'].groupby(['company'])['date'].agg(['count','max'])\n",
+    "df_em=df[df['job_type']=='em'].groupby(['company'])['date'].agg(['count','max'])\n",
+    "df_em['count']=df_em['count'].apply(lambda x: x*EM_AS_ENG_MULTIPLIER)\n",
+    "df2=pd.merge(df_eng,df_em,on='company',how='outer')\n",
+    "df2 = df2.fillna(0)\n",
+    "df2['count']=df2['count_x']+df2['count_y']\n",
+    "df2['max']=df2.apply(lambda row: max(str(row['max_x']),str(row['max_y'])), axis=1)\n",
+    "p95count=df2['count'].quantile(.95)\n",
+    "print(f\"p95count:{p95count}\")\n",
+    "df2[df2['count']>p95count].sort_values('count',ascending=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
