fixed duplication logic; added more to ignore list, added filter for loading csv to cache

--- a/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper.ipynb
@@ -43,7 +43,7 @@
     "    \n",
     "debug_level = DebugLevel.WARN\n",
     "debug_company=\"\"\n",
-    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\",\"LanceSoft, Inc.\"]"
+    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\",\"LanceSoft, Inc.\",\"EV.Careers\",\"Insight Global\",\"Griffin Global Systems, Inc.\",\"Insight Global\",\"EVONA\",\"Steneral Consulting\",\"iHire\",\"TALENT Software Services\"]"
    ]
   },
   {
@@ -70,13 +70,16 @@
     "        \n",
     "        if key in dups_detection:\n",
     "            print(f\"duplicate detected: job_id={key}\")\n",
-    "        else:\n",
     "            dups_detection.append(key)\n",
     "            \n",
     "        value = {k: v for k, v in row.items() if k != 'job_id'}\n",
-    "        jobs[key] = value\n",
     "\n",
-    "    print(f\"{len(jobs)} rows read from csv\")\n",
+    "        if value[\"company\"] in ignore_list:\n",
+    "            print(f\"ignoring company from source: {value['company']}\")\n",
+    "        else:\n",
+    "            jobs[key] = value\n",
+    "\n",
+    "    print(f\"{len(jobs)} rows read from csv; {len(dups_detection)} dups detected in csv\")\n",
     "    return"
    ]
   },
@@ -191,6 +194,13 @@
     "print(f\"p95count:{p95count}\")\n",
     "df2[df2['count']>p95count].sort_values('count',ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
